--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300');
 		</style>
 		<link rel="stylesheet" href="css/style.css">
     <title>Suds 2 Buds</title>
